# raum-fuer-raum-software

./: .geminiignore  .gitignore  BUGS.md  CONTEXT.md  Cargo.toml  DESIGN.md  GEMINI.md  SCHEMA.md  server_output.txt
.gemini/agents/: code-reviewer.md  orchestrator.md  rust-backend-expert.md  tester.md  workspace-janitor.md
Dokumentation/: Architektur.md  SubAgents.md
migrations/: 20240405120000_init.sql  20240405130000_add_einsaetze.sql  20240405140000_add_dateien.sql  20240406100000_rename_stadt_to_ort.sql  20240407100000_extend_models.sql  20240407110000_add_rechnungen.sql  20240408120000_add_signature_to_einsaetze.sql  20240408150000_add_prices_to_auftraege.sql  20240408160000_fix_km_satz_naming.sql  20240409000000_add_indices.sql  20240409000001_add_status_index.sql  20240409000002_add_settings.sql  20240410000000_add_users.sql  20240411000000_fix_admin_hash.sql
src/: database.rs  error.rs  files.rs  lib.rs  main.rs  models.rs  pdf.rs
static/: index.html  login.html
templates/: datenschutz.html  datenschutz.typ  rechnung.html  vertrag.html  vertrag.typ
tests/: api_stats_verify.rs  fix_rechnung_bug_test.rs  headless_chrome_test.rs  pdf_test.rs  reproduce_bcrypt_error.rs  reproduce_rechnung_bug.rs
