[package]
name = "achtsam-entruempeln-software"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
typst-as-lib = "0.3.6"
typst = "0.11"
typst-pdf = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
